# azote

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md
include/azote/: azote.h
src/: CMakeLists.txt
src/azote/: CMakeLists.txt  Emulator.h  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h  main.cpp
src/libazote/: CMakeLists.txt  audio.c  cpu.c  crc32.c  debug.c  frame.c  init.c  interpreter.c  libazote.h  load.c  memory.c  mips.h  pif.c  rcp.c  rdp.c  rom.c  rsp.c  tlb.c  worker.c
src/libazote/op/: op_alu.c  op_alu_imm.c  op_branch.c  op_cop0.c  op_cop1.c  op_fp_convert.c  op_fp_math.c  op_load.c  op_load_store.c  op_misc.c  op_mult_div.c  op_shift.c  op_store.c
src/libazote/rcp/: ai.c  mi.c  pi.c  si.c  sp.c  vi.c
src/libazote/sys/unix/: thread.c  time.c
src/libazote/sys/win32/: thread.c  time.c
